[gd_scene load_steps=11 format=3 uid="uid://btpcfixose26a"]

[ext_resource type="Script" path="res://src/gameplay/enemies/enemy.gd" id="1_jjbrk"]
[ext_resource type="Script" path="res://src/gameplay/player_stuff/health_component.gd" id="3_42ayq"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/state_machine.gd" id="4_e4vy3"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/start_enemy_state.gd" id="5_adcol"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/go_away_enemy_state.gd" id="6_ypg4f"]
[ext_resource type="Script" path="res://src/gameplay/player_stuff/status_handler.gd" id="7_gns41"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/dead_enemy_state.gd" id="7_qpuoh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxgi2"]
size = Vector2(60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_gvfid"]
animations = [{
"frames": [],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7anvf"]

[node name="Enemy" type="Node2D" node_paths=PackedStringArray("fact_size_area", "sprite", "health_comp", "weapon_marker", "state_machine", "status_handler")]
script = ExtResource("1_jjbrk")
fact_size_area = NodePath("FactSizeArea")
sprite = NodePath("AnimatedSprite2D")
health_comp = NodePath("HealthComponent")
weapon_marker = NodePath("WeaponMarker")
state_machine = NodePath("StateMachine")
status_handler = NodePath("StatusHandler")

[node name="FactSizeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FactSizeArea"]
shape = SubResource("RectangleShape2D_xxgi2")
debug_color = Color(0.392157, 0.611765, 0, 0.152941)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gvfid")
flip_h = true

[node name="HealthComponent" type="Area2D" parent="."]
script = ExtResource("3_42ayq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("RectangleShape2D_7anvf")

[node name="WeaponMarker" type="Marker2D" parent="."]
position = Vector2(-20, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_e4vy3")
initial_state = NodePath("StartEnemyState")

[node name="StartEnemyState" type="Node" parent="StateMachine"]
script = ExtResource("5_adcol")

[node name="GoAwayEnemyState" type="Node" parent="StateMachine"]
script = ExtResource("6_ypg4f")

[node name="DeadEnemyState" type="Node" parent="StateMachine"]
script = ExtResource("7_qpuoh")

[node name="StatusHandler" type="Node2D" parent="."]
position = Vector2(0, -30)
script = ExtResource("7_gns41")
